# codecrafters-redis-python

./: README.md  pyproject.toml
app/: main.py  redis.py
