[tool.poetry]
name = "codecrafters-redis-python"
version = "0.1.0"
description = ""
authors = ["Michael Aydinbas <michael.aydinbas@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
